--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "Chat application using socket.io",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
